Changed javascript engine to Rhino

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,12 @@ org.gradle.daemon=false
 mod_id=kubejs
 mod_name=kubejs
 mod_package=dev.latvian.mods
-mod_version=2.7.2
+mod_version=1601.3.0
 mod_author=LatvianModder
 curseforge_id=238086
 forge_version=1.16.1-32.0.93
 mapping_version=20200723-1.16.1
+rhino_file=3097962
 jei_file=2995910
 bookshelf_file=3006167
 gamestages_file=3007935
